--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -48,6 +48,13 @@
   date = {1998-11-19},
 }
 
+@software{WiiRemoteUnityAPI,
+  author = {{Flafla2}},
+  title = {C\# / Unity Wii Remote API},
+  url = {https://github.com/Flafla2/Unity-Wiimote},
+  date = {2015-10-16},
+}
+
 @software{BladeAndSorcery,
   author = {{WarpFrog}},
   title = {Blade and Sorcery},
@@ -68,6 +75,22 @@
   date = {2011-11-18},
 }
 
+@article{SkywardReviewNintendolife,
+  author          = {Newton, James},
+  journal         = {nintendolife.com},
+  title           = {The Legend of Zelda: Skyward Sword Review},
+  year            = {2011},
+  url             = {https://www.nintendolife.com/reviews/wii/the_legend_of_zelda_skyward_sword},
+}
+
+
+@article{SkywardReviewIgn,
+  author          = {George, Richard},
+  journal         = {ign.com},
+  title           = {The Legend of Zelda: Skyward Sword Review},
+  year            = {2011},
+  url             = {https://www.ign.com/articles/2011/11/11/the-legend-of-zelda-skyward-sword-review},
+}
 
 @manual{PhysX,
   author       = {NVIDIA},
