--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -181,6 +181,16 @@
   url             = {https://bop.unibe.ch/apd/article/view/6863},
 }
 
+
+@article{AccelerometerStepDetectionUsingML,
+  author          = {Young Park, So and Jong Heo, Se and Gook Park, Chan},
+  journal         = {International Electrical Engineering Congress},
+  number          = {5},
+  title           = {Accelerometer-based smartphone step detection using machine learning technique},
+  year            = {2017},
+  url             = {https://ieeexplore.ieee.org/abstract/document/8075875},
+}
+
 @booklet{SapkowskiZaklinac,
   author       = {Sapkowski, Andrzej},
   title        = {Zaklínač},
