add game screenshots to ch.1

--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -134,6 +134,13 @@ Zaklínač 3: Divoký Hon \cite{Wiedzmin3} je akční \acs{RPG} hra, která byla
 Hráč se zde ujímá role Geralta z Rivie - zaklínače, \textbf{profesionálního lovce monster}. Ten je kromě svých dvou mečů\footnote{stříbrného pro boj s nestvůrami a železného proti lidem} vybaven flexibilními možnostmi pohybu, jednoduchými kouzly (tzv. Zaklínačská Znamení) a škálou ručně vařených lektvarů. Na své cestě bojuje s lidmi, duchy, upíry, bazilišky i nepopsatelnými obludami z nočních můr.
 Jak tedy vypadají mechaniky, skrze které bylo toto vše umožněno?
 
+\begin{figure}[h]\centering
+    \center
+    \includegraphics[width=140mm]{../img/Wiedzmin-combat.jpg}
+    \caption{Zaklínač 3 - ukázka boje}
+    \label{obr01:wiedzmin}
+\end{figure} 
+
 
 Základem jsou \textbf{dva typy úderů - rychlý a silný}. Jak vyplývá z názvu, rychlý úder je rychlejší, oproti tomu animace silného úderu trvá mírně delší čas, avšak zranění způsobené protivníkovi je také adekvátně zvýšené. Jaký z tohoto rozlišení plyne prospěch? Pro mnoho protivníků platí, že v okamžiku, kdy jim je učiněno nezanedbatelné zranění, přeruší akci, kterou se chystali provádět, a na zlomek času zakolísají. S rychlým úderem je hráč schopen toto zakolísání vyvolat častěji - s dobrým časováním se lze například dostat do cyklu, kdy lehkooděného protivníka hráč udolá jedním úderem za druhým aniž ten se zmohl udělat cokoliv proti vám. Toto stejné zakolísání však může potkat i hráče. Hráč se tedy neustále nachází v časovém tlaku, který ho vybízí kalkulovat - např. zda stihne dva rychlé údery, či raději jen jeden silný, než ho nějaký nepřítel přeruší. Dalším důvodem proč používat silný útok jsou těžkoodění nepřátelé, kterým rychlý útok udílí zranění velmi redukované. 
 
@@ -218,6 +225,15 @@ Vidíme, že poskytnout hráči přímou kontrolu nad mečem je nevděčný úko
 
 Průkopníkem v této oblasti je Die by the Sword \cite{DieByTheSword}, hra vydaná kalifornskou společností Treyarch Corporation roku 1998. 
 
+
+\begin{figure}[h]\centering
+    \center
+    \includegraphics[width=140mm]{../img/DbtS-combat.png}
+    \caption{Die by the Sword - ukázka boje}
+    \label{obr01:dbts}
+\end{figure} 
+
+
 Jde o jedinou hru, kterou si zde představíme, jež se nevydala cestou omezení množiny stavů meče na konečné množství, ale nabídla hráči skutečně \textbf{jemnou, spojitou kontrolu}. Ta byla umožněna zapojením jednoduchého \textbf{realistického fyzikálního subsystému}, což byl na tehdejší dobu úkaz vskutku nevídaný vzhledem k hardwarovým omezením, v jejichž rámci bylo nutno operovat.
 
 \textbf{Backend hry} umožňoval \textbf{plně volný pohyb} všech objektů třímaných herní postavou (postava mohla např. v jedné ruce držet meč a ve druhé štít či druhý meč), přičemž tělo postavy bylo \textbf{procedurálně animováno} (další na tuto dobu vzácný úkaz), aby poloha jejích rukou s polohou objektů korespondovala.
@@ -240,6 +256,13 @@ Celkově vidíme, že hra přinesla systém poskytující \textbf{dodnes nepřek
 Kultovní klasikou je Mount\&Blade \cite{MountAndBlade}. První verzi této hry vydalo turecké studio TaleWorlds v roce 2008, později se hra pro velkou oblíbenost mezi hráči dočkala datadisku Warband a velmi nedávno i druhého dílu Bannerlord, který mnoho mechanik hrubě nastíněných v původní hře dále rozvádí a prohlubuje. My se zde budeme věnovat prvnímu dílu, který je v kombinaci s datadiskem Warband i v dnešní době mezi hráči velmi oblíbený a materiálů pro analýzu nám poskytne zcela dostatečné množství.
 
 Jde o \textbf{sandbox} s \acs{RPG} prvky, kde se hráč ujímá role vůdce žoldnéřské skupiny. V jeho kůži putuje od království ke království, verbuje vojáky, plní úkoly pro okolní šlechtice a účastní se po jejich boku bitev se šlechtici znepřátelených zemí. Svět je velmi silně inspirován středověkou Evropou, nenajdeme zde žádnou magii. Nepřáteli jsou výhradně lidé. 
+
+\begin{figure}[h]\centering
+    \center
+    \includegraphics[width=140mm]{../img/MountAndBlade-combat.jpg}
+    \caption{Mount\&Blade - ukázka boje}
+    \label{obr01:mountandblade}
+\end{figure} 
 
 Ovládání vlastní hráčské postavy zde tvoří pouze polovinu skládačky bojového systému - tou druhou je udílení rozkazů zverbovaným vojákům. V bitvách se zde střetávají typicky vyšší desítky až nižší stovky bojovníků spřátelených a nepřátelských. \textbf{Hráčská postava je zde pouze jedním z mnoha} - počítačem řízení bojovníci mají shodné možnosti pohybu i ovládání zbraně a podléhají stejnému systému \acs{RPG} progrese. 
 
@@ -269,6 +292,13 @@ Celkově tedy vidíme, že hře se podařilo najít \textbf{zajímavý kompromis
 
 \subsection{Kingdom Come: Deliverance}
 Poslední hrou, kterou zmíníme, je Kingdom Come: Deliverance \cite{KCD}, vydáné roku 2018 českými Warhorse Studios. Jde o akční \acs{RPG} odehrávající se v českém Posázaví roku 1403. Jedním z hlavních důrazů hry byla \textbf{historická věrnost a celková realističnost zážitku} - z tohoto rozhodnutí plynou přirozeně dalekosáhlé důsledky pro bojový systém.
+
+\begin{figure}[h]\centering
+    \center
+    \includegraphics[width=140mm]{../img/KCD-combat.jpg} 
+    \caption{Kingdom Come: Deliverance - ukázka boje}
+    \label{obr01:kcd}
+\end{figure} 
 
 Některé prvky hra sdílí s předchozí představenou Mount\&Blade. Hráč je zde rovněž pouze \textbf{jedním z mnoha}, lidští \acs{NPC}s mají totožné možnosti pohybu, ovládání meče a vztahuje se na ně i stejný systém RPG progrese.
 
