--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -388,7 +388,7 @@ V praxi však kvalita výstupů těchto senzorů není na přijatelné úrovni \
 \subsection{Shrnutí}
 Provedli jsme zamyšlení nad alternativními způsoby ovládání, které by usnadnily náš úkol poskytnout hráči intuitivní a jemnou kontrolu nad mečem. Ovladače pro \acs{VR} jsou očividným řešením, dokonce již existuje několik her, které jejich velmi dobrou použitelnost demonstrují v praxi. Stále však jde o malý trh, který se jen velmi pomalu rozšiřuje do mainstreamu - omezíme-li se na něj, citelně se zůží potenciální hráčské publikum.
 
-Podobným případem je ovladač pro konzoli Nintendo Wii. Jde o praxí osvědčené a relativně levně dostupné zařízení, jeho podpora u komerční PC hry by však znamenala právní risky.
+Podobným případem je ovladač pro konzoli Nintendo Wii. Jde o praxí osvědčené a relativně levně dostupné zařízení, jeho podpora u komerční PC hry by však znamenala právní risk.
 
 Problém dostupnosti by se dal vyřešit emulací takového ovladače pomocí běžného chytrého telefonu. Moderní mobilní zařízení jsou vybaveny škálou senzorů, s jejichž použitím by to neměl být problém. V praxi však jsou senzory náchylné na šum, narážíme rovněž na fragmentaci mobilního trhu, každý model trpí na šum trochu jiným způsobem. Dovedení této metody do použitelného stavu by vyžadovalo další výzkum, kterého se příliš nedostává.
 
