--- a/cs/kap02.tex
+++ b/cs/kap02.tex
@@ -1,4 +1,4 @@
-\chapter{Stanovení cíle}
+\chapter{Stanovení cíle} \label{goalSettingChapter}
 
 V této kapitole se zamyslíme a stanovíme cíle, o něž tato práce bude usilovat. Následně vybereme nástroje, které nám k dosažení těchto cílů poslouží.  
 
