--- a/cs/kap03.tex
+++ b/cs/kap03.tex
@@ -148,7 +148,7 @@ Přímo na této komponentě můžeme nastavit jeho základní parametry jako je
 
 Mezi těmito dvěma stavy \textbf{lze přepínat} jednoduše úpravou flagu (rigidbody.isKinematic). Nečiní tedy problém mít např. meč, který je plně fyzikálně simulovaný, ale při sesílání kouzla se přepne a přehraje předpřipravenou animaci, či naopak postavu, která je ovládána animacemi, ale v okamžiku smrti se změní ve fyzikálně simulovanou ragdoll.
 
-\subsection{Collider}
+\subsection{Collider} \label{collidersPhysicsIntroSubsection}
 
 Collidery jsou komponenty, které určují pro účely fyzikálního systému tvar objektu a umožňují mu kolidovat s ostatními objekty. 
 
