fixed a warning when inserting images

--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -56,7 +56,7 @@ Máte-li oba stejný dosah, pohyb se však nestává o nic méně důležitým. 
 Znakem každého dobrého šermíře je schopnost vcítit se do pozice svého protivníka a \textbf{odhadovat jeho budoucí akce} dříve, než se stanou. Nezkušený šermíř bude každý svůj úder provázet výrazným nápřahem, pro jeho protivníka pak není obtížné úder vyblokovat a přitom se rovnou k protivníkovi přiblížit a seknout po místě, které ví, že při úderu protivník nechal nechráněné. Zkušený šermíř pak ani nepotřebuje vidět výrazný nápřah, naučí se protivníkovu akci podvědomě vycítit z drobných náznaků (pohybů svalů, očí,...). Samozřejmě je možné předvádět údery fingovaně a čekat, že se při protiútoku otevře protivník vám. Pak záleží na jeho úsudku, zda úmysl prokoukne a provede fingovaný protiútok - stupňům falše se meze nekladou. 
 
 
-\begin{figure}[h]\centering
+\begin{figure}[ht]\centering
     \center
     \includegraphics[width=140mm]{../img/Meyer_1570_Sword_B.png}
     \includegraphics[width=140mm]{../img/Meyer_1570_Sword_C.png}
@@ -134,7 +134,7 @@ Zaklínač 3: Divoký Hon \cite{Wiedzmin3} je akční \acs{RPG} hra, která byla
 Hráč se zde ujímá role Geralta z Rivie - zaklínače, \textbf{profesionálního lovce monster}. Ten je kromě svých dvou mečů\footnote{stříbrného pro boj s nestvůrami a železného proti lidem} vybaven flexibilními možnostmi pohybu, jednoduchými kouzly (tzv. Zaklínačská Znamení) a škálou ručně vařených lektvarů. Na své cestě bojuje s lidmi, duchy, upíry, bazilišky i nepopsatelnými obludami z nočních můr.
 Jak tedy vypadají mechaniky, skrze které bylo toto vše umožněno?
 
-\begin{figure}[h]\centering
+\begin{figure}[ht]\centering
     \center
     \includegraphics[width=140mm]{../img/Wiedzmin-combat.jpg}
     \caption{Zaklínač 3 - ukázka boje}
@@ -226,7 +226,7 @@ Vidíme, že poskytnout hráči přímou kontrolu nad mečem je nevděčný úko
 Průkopníkem v této oblasti je Die by the Sword \cite{DieByTheSword}, hra vydaná kalifornskou společností Treyarch Corporation roku 1998. 
 
 
-\begin{figure}[h]\centering
+\begin{figure}[ht]\centering
     \center
     \includegraphics[width=140mm]{../img/DbtS-combat.png}
     \caption{Die by the Sword - ukázka boje}
@@ -257,7 +257,7 @@ Kultovní klasikou je Mount\&Blade \cite{MountAndBlade}. První verzi této hry 
 
 Jde o \textbf{sandbox} s \acs{RPG} prvky, kde se hráč ujímá role vůdce žoldnéřské skupiny. V jeho kůži putuje od království ke království, verbuje vojáky, plní úkoly pro okolní šlechtice a účastní se po jejich boku bitev se šlechtici znepřátelených zemí. Svět je velmi silně inspirován středověkou Evropou, nenajdeme zde žádnou magii. Nepřáteli jsou výhradně lidé. 
 
-\begin{figure}[h]\centering
+\begin{figure}[ht]\centering
     \center
     \includegraphics[width=140mm]{../img/MountAndBlade-combat.jpg}
     \caption{Mount\&Blade - ukázka boje}
@@ -293,7 +293,7 @@ Celkově tedy vidíme, že hře se podařilo najít \textbf{zajímavý kompromis
 \subsection{Kingdom Come: Deliverance}
 Poslední hrou, kterou zmíníme, je Kingdom Come: Deliverance \cite{KCD}, vydáné roku 2018 českými Warhorse Studios. Jde o akční \acs{RPG} odehrávající se v českém Posázaví roku 1403. Jedním z hlavních důrazů hry byla \textbf{historická věrnost a celková realističnost zážitku} - z tohoto rozhodnutí plynou přirozeně dalekosáhlé důsledky pro bojový systém.
 
-\begin{figure}[h]\centering
+\begin{figure}[ht]\centering
     \center
     \includegraphics[width=140mm]{../img/KCD-combat.jpg} 
     \caption{Kingdom Come: Deliverance - ukázka boje}
